changes regarding transactions
